fix gap, data-activeNum data-count-num in latency

--- a/app/scss/index/_metrics.scss
+++ b/app/scss/index/_metrics.scss
@@ -17,7 +17,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 56px;
+    gap: 57px;
   }
   &__item {
     width: max-content;
